Closed Bug 344898 Opened 19 years ago Closed 19 years ago

Crash removing text from textPath [@ nsSVGTextFrame::GetCanvasTM] [@ nsSVGTextFrame::UpdateGlyphPositioning] [@ GetSingleValue]

Categories

(Core :: SVG, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: crash, fixed1.8.1, testcase)

Crash Data

Attachments

(3 files)

Nightly: Thread 0 Crashed: nsSVGTextFrame::GetCanvasTM() + 508 nsSVGTextFrame::UpdateGlyphPositioning() + 284 nsSVGTextFrame::NotifyRedrawUnsuspended() + 304 Debug: Thread 0 Crashed: GetSingleValue(nsISVGGlyphFragmentLeaf*, nsIDOMSVGLengthList*, float*) + 316 (nsSVGTextFrame.cpp:497) nsSVGTextFrame::UpdateGlyphPositioning() + 496 (nsSVGTextFrame.cpp:588) nsSVGTextFrame::NotifyRedrawUnsuspended() + 356 (nsSVGTextFrame.cpp:311)
Attached image testcase
Blocks: 344905
Attached patch patchSplinter Review
Assignee: general → longsonr
Status: NEW → ASSIGNED
Attachment #229504 - Flags: review?(tor)
Attachment #229504 - Flags: review?(tor) → review+
Attachment #229504 - Flags: superreview?(roc)
Attachment #229504 - Flags: superreview?(roc) → superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Is it worth trying to get this on the firefox 2.0 branch?
(In reply to comment #4) > Is it worth trying to get this on the firefox 2.0 branch? Sure.
Attached patch branch patchSplinter Review
exactly the same thing for MOZILLA_1_8_BRANCH
Attachment #229839 - Flags: superreview?(roc)
Attachment #229839 - Flags: review?(tor)
Attachment #229839 - Flags: approval1.8.1?
Attachment #229839 - Flags: review?(tor) → review+
Attachment #229839 - Flags: superreview?(roc) → superreview+
Comment on attachment 229839 [details] [diff] [review] branch patch a=drivers, please land on the 181branch
Attachment #229839 - Flags: approval1.8.1? → approval1.8.1+
Checked into MOZILLA_1_8_BRANCH
Keywords: fixed1.8.1
Crashtest checked in.
Flags: in-testsuite+
Crash Signature: [@ nsSVGTextFrame::GetCanvasTM] [@ nsSVGTextFrame::UpdateGlyphPositioning] [@ GetSingleValue]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: