Bug 344898 - Crash removing text from textPath. r=tor, sr=roc